fail_crate/tests/constant_instead_of_const.rs
use inew::New;

#[derive(New)]
#[new(constant)]
struct A;

fn main() {}
